<resources>
    <string name="app_name">DesafioPractico1</string>
    <string name="title_activity_pago_liquido">PagoLiquido</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title">Bienvenido</string>
    <string name="buttonEcuacion">Ir a Ecuaciones</string>
    <string name="buttonVotacion">Ir a Votaciones</string>
    <string name="buttonPago">Ir a Pago Líquido</string>
    <string name="name">Benjamín Alvarenga</string>
    <string name="id">AV221218</string>

    <!-- Ecuaciones view -->
    <string name="titleEcuaciones">Calculadora de ecuaciones</string>
    <string name="contentDescription">Ecuacion Cuadrática</string>
    <string name="subtitleEcuaciones">Ingrese los datos para cada variable:</string>
    <string name="a">a:</string>
    <string name="b">b:</string>
    <string name="c">c:</string>
    <string name="resultEcuaciones">Resultado:</string>
    <string name="buttonCalcular">Calcular</string>

    <!-- Votacion vew -->
    <string name="titleVotacion">Resultados de votaciones</string>
    <string name="subtitleVotacion">Ingrese los votos: </string>
    <string name="hint">Ej: 1, 2, 4, 3, 1, 1, 2...</string>
    <string name="resultVotacion">Ver Resultados</string>

    <!-- Pago Liquido view -->
    <string name="contentDescriptionVotacion">Icono</string>
    <string name="resultText">Resultados:</string>
    <string name="contentDescriptionPagoLIquido">Añadir empleado</string>
    <string name="modalTitle">Añadir un nuevo empleado</string>
    <string name="nameHint">Nombre</string>
    <string name="apellidoHint">Apellido</string>
    <string name="cargoHint">Cargo</string>
    <string name="horasHint">Horas trabajadas</string>
    <string name="addNewEmpleadoButton">Añadir</string>
    <string name="nombreEmpleado">Nombre:</string>
    <string name="rolEmpleado">Rol:</string>
    <string name="descuento_iss">Descuento ISS:</string>
    <string name="descuento_afp">Descuento AFP:</string>
    <string name="descuento_renta">Descuento Renta:</string>
    <string name="sueldo_liquido">Sueldo Liquido:</string>

    <string name="signup">SignUp</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="repeatPassword">Repetir Contraseña</string>
    <string name="sign_up">Sign Up</string>
    <string name="loginHook">¿Ya tienes una cuenta?, Iniciar Sesión</string>
    <string name="signupHook">Crear cuenta</string>
    <string name="loginTitle">Log In</string>
    <string name="log_out">Log out</string>
    <string name="log_in">Log In</string>

</resources>