<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".fragments.AddEmpleadoModal">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/modalTitle"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/empleadoName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/nameHint" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/empleadoLastName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/apellidoHint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp">

        <AutoCompleteTextView
            android:id="@+id/cargo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            android:hint="@string/cargoHint" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="number"
            android:id="@+id/empleadoHoras"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/horasHint" />
    </com.google.android.material.textfield.TextInputLayout>
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/addEmpleadoButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:text="@string/addNewEmpleadoButton"/>

</LinearLayout>